--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ selenium = "^4.12.0"
 webdriver-manager = "^4.0.0"
 flask = "^2.3.3"
 yt-dlp = "^2023.7.6"
+pillow = "^10.0.0"
+opencv-python = "^4.8.0.76"
 
 
 [build-system]
