--- a/Bot/Dockerfile
+++ b/Bot/Dockerfile
@@ -1,12 +1,12 @@
 # syntax=docker/dockerfile:1
 FROM alpine:3.18.2
 
-RUN mkdir /app && mkdir /app/data
-WORKDIR /app
+RUN mkdir /lynxie && mkdir /lynxie/data
+WORKDIR /lynxie
 
-COPY ./lynxie /app
-COPY ./poetry.lock /app
-COPY ./pyproject.toml /app
+COPY ./lynxie /lynxie
+COPY ./poetry.lock /lynxie
+COPY ./pyproject.toml /lynxie
 
 RUN apk update
 RUN apk --no-cache add python3 py3-pip curl
